--- a/cluster/lab0/app_of_apps.yaml
+++ b/cluster/lab0/app_of_apps.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: app-of-apps
-  namespace: openshift-gitops
+  namespace: argocd
 spec:
   clusterResourceWhitelist:
   - group: '*'
@@ -17,7 +17,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: app-of-apps
-  namespace: openshift-gitops
+  namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
