--- a/apps/lab0/counter_dev/app.yaml
+++ b/apps/lab0/counter_dev/app.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: ondrejsika-counter-dev
-  namespace: openshift-gitops
+  namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
